--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,13 +30,64 @@ jobs:
           cd coverage
           sbt ++${{ matrix.scala }} test
 
+  benchmarks:
+    name: benchmarks
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        # 4.028: Ubuntu 20.04, Fedora 32
+        # 4.032: Fedora 33
+        # 4.034: Chipyard
+        # 4.038: Ubuntu 20.10
+        # 4.108: Fedora 34
+        # 4.200: latest (unsupported atm)
+        version: ["4.034"]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install Verilator Build Dependencies
+        run: sudo apt-get install -y git make autoconf g++ flex bison libfl2 libfl-dev
+      - name: Cache Verilator ${{ matrix.version }}
+        uses: actions/cache@v2
+        id: cache-verilator
+        with:
+          path: verilator-${{ matrix.version }}
+          key: ${{ runner.os }}-verilator-${{ matrix.version }}
+      - name: Compile Verilator ${{ matrix.version }}
+        if: steps.cache-verilator.outputs.cache-hit != 'true'
+        run: |
+          wget https://github.com/verilator/verilator/archive/refs/tags/v${{ matrix.version }}.zip
+          unzip v${{ matrix.version }}.zip
+          cd verilator-${{ matrix.version }}
+          autoconf
+          ./configure
+          make
+      - name: Install Verilator ${{ matrix.version }}
+        run: |
+          cd verilator-${{ matrix.version }}
+          sudo make install
+          verilator --version
+      - name: Setup Scala
+        uses: olafurpg/setup-scala@v10
+        with:
+          java-version: adopt@1.8
+      - name: Cache Scala
+        uses: coursier/cache-action@v5
+      - name: Compile some benchmarks
+        run: |
+          cd benchmarks
+          make riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_line_firrtl
+          make riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_line_native
+          make riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_native
+
   # Sentinel job to simplify how we specify which checks need to pass in branch
   # protection and in Mergify
   #
   # When adding new jobs, please add them to `needs` below
   all_tests_passed:
     name: "all tests passed"
-    needs: [test]
+    needs: [test, benchmarks]
     runs-on: ubuntu-latest
     steps:
       - run: echo Success!
