--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,13 +74,16 @@ jobs:
           java-version: adopt@1.8
       - name: Cache Scala
         uses: coursier/cache-action@v5
-      - name: Compile some benchmarks
-        run: |
-          cd benchmarks
-          make LL=info riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_line_firrtl
-          make riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_line_native
-          make LL=info riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_firrtl
-          make riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_native
+      - name: Compile Scala
+        run: cd coverage && sbt assembly
+      - name: Compile Firrtl Line Coverage
+        run: cd benchmarks && make LL=info riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_line_firrtl
+      - name: Compile Verilator Line Coverage
+        run: cd benchmarks && make riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_line_native
+      - name: Compile Firrtl Toggle Coverage
+        run: cd benchmarks && make LL=info riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_firrtl
+      - name: Compile Verilator Toggle Coverage
+        run: cd benchmarks && make riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_native
 
   # Sentinel job to simplify how we specify which checks need to pass in branch
   # protection and in Mergify
