--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,6 +84,14 @@ jobs:
         run: cd benchmarks && make LL=info riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_firrtl
       - name: Compile Verilator Toggle Coverage
         run: cd benchmarks && make riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_native
+      - name: Run Firrtl Line Coverage
+        run: time ./benchmarks/riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_line_firrtl
+      - name: Run Verilator Line Coverage
+        run: time ./benchmarks/riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_line_native
+      - name: Run Firrtl Toggle Coverage
+        run: time ./benchmarks/riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_firrtl
+      - name: Run Verilator Toggle Coverage
+        run: time ./benchmarks/riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_native
 
   # Sentinel job to simplify how we specify which checks need to pass in branch
   # protection and in Mergify
