--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -11,11 +11,11 @@ firrtl: $(firrtl_jar)
 
 %_line.sv: %.fir $(firrtl_jar)
 	# hack to ignore the top level module
-	$(firrtl_bin) -i $< -E sverilog -o $@ --line-coverage --do-not-cover $(shell head -n 1 $< | cut -d' ' -f 2):$(shell head -n 1 $< | cut -d' ' -f 2)
+	$(firrtl_bin) -i $< -E sverilog -o $@ --line-coverage --emit-cover-info --do-not-cover $(shell head -n 1 $< | cut -d' ' -f 2):$(shell head -n 1 $< | cut -d' ' -f 2)
 
 %_toggle.sv: %.fir $(firrtl_jar)
 	# hack to ignore the top level module
-	$(firrtl_bin) -i $< -E sverilog -o $@ --toggle-coverage --do-not-cover $(shell head -n 1 $< | cut -d' ' -f 2):$(shell head -n 1 $< | cut -d' ' -f 2)
+	$(firrtl_bin) -i $< -E sverilog -o $@ --toggle-coverage --emit-cover-info --do-not-cover $(shell head -n 1 $< | cut -d' ' -f 2):$(shell head -n 1 $< | cut -d' ' -f 2)
 
 # Testbench top (same for all simulator binaries)
 %.cpp: %.fir template.cpp
