--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,10 +37,11 @@ jobs:
         # 4.032: Fedora 33
         # 4.034: Chipyard
         # 4.038: Ubuntu 20.10
+        # 4.106: Verilator version that we used in the original benchmarking
         # 4.108: Fedora 34
         # 4.200: currently the latest version on brew (MacOS)
         # 4.202: added "forcePerInstance" to support our coverage flow
-        version: ["4.202"]
+        version: ["4.106", "4.202"]
 
     steps:
       - name: Checkout
@@ -86,8 +87,10 @@ jobs:
       - name: Run Verilator Toggle Coverage
         run: time ./benchmarks/riscv-mini/TileTester_BmarkTestsmedian.riscv/TileTester_toggle_native
       - name: Compile Firrtl Line Coverage (Neuromorphic Processor)
+        timeout-minutes: 3
         run: cd benchmarks && make LL=info NeuromorphicProcessor/NeuromorphicProcessor_line_firrtl
       - name: Run Firrtl Line Coverage (Neuromorphic Processor)
+        timeout-minutes: 3
         run: time ./benchmarks/NeuromorphicProcessor/NeuromorphicProcessor_line_firrtl
 
   # Sentinel job to simplify how we specify which checks need to pass in branch
